--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import Icon from "../components/Icon.astro";
 import Layout from "../layouts/Layout.astro";
 import {
-  EDUCATION,
-  PAST_EXPERIENCE_HOMEPAGE,
-  HIGHLIGHTS_HOMEPAGE,
+	EDUCATION,
+	PAST_EXPERIENCE_HOMEPAGE,
+	HIGHLIGHTS_HOMEPAGE,
 } from "../utils/constants";
 import { marked } from "marked";
 ---
@@ -17,9 +17,7 @@ import { marked } from "marked";
         {
           HIGHLIGHTS_HOMEPAGE.map((highlight, idx) => (
             <div
-              class={`card w-fit flex flex-col gap-2 ${
-                idx === 0 ? "md:col-span-2" : "col-span-1"
-              }`}
+              class="card w-fit flex flex-col gap-2 col-span-1"
             >
               <p class="font-bold">{highlight.title}</p>
               <p class="text-sm">{highlight.description}</p>
