main copy + blog

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,6 @@ import Floater from "./Floater.astro";
 import { Image } from "astro:assets";
 ---
 
-{/*<Navbar activeUrl={route} />*/}
 <div class="flex flex-col md:flex-row items-center gap-10">
   <div class="flex flex-col">
     <h1 class="text-xl tracking-wide">
@@ -15,12 +14,8 @@ import { Image } from "astro:assets";
     </h1>
     <div class="flex flex-col gap-1 text-sm text-zinc-500 dark:text-zinc-300 mt-4">
       <p>
-        I'm a Fullstack Engineer from Portugal with a master's degree in
-        Informatics Security and bachelor in Computer Science. Currently working
-      remotely at OpenBB. 
-    </p>
-    <p>
-      My main interests are <span class="underline-animation">web development</span> and <span class="underline-animation">quant trading</span>.
+        I'm a Fullstack Engineer from Portugal, specializing in building tools for quants and traders. Currently leading web development at OpenBB, I've architected and built OpenBB Workspace from the ground up over the past 4 years.
+        My passion lies at the intersection of <span class="underline-animation">trading</span> and <span class="underline-animation">web technology</span>.
     </p>
     <p>
       Want to have a quick chat? You can DM me on Twitter, LinkedIn, or email me.
