copy change + sprite

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,10 @@
-<p class="text-center text-xs text-zinc-500/50 mt-16 pb-10">
-  Made with ❤️ by <a href="https://jose-donato.pages.dev" class="link opacity-50">José Donato</a>. <br />Open source on <a rel="noopener noreferrer" target="_blank" href="https://github.com/jose-donato/jose-donato.pages.dev" class="link opacity-50">GitHub</a>. If you like it, please give it a ⭐️!
+<p class="text-center text-xs text-zinc-700 dark:text-zinc-300 mt-16 pb-10">
+  Made with ❤️ by <a href="https://jose-donato.pages.dev" class="link"
+    >José Donato</a
+  >. <br />Open source on <a
+    rel="noopener noreferrer"
+    target="_blank"
+    href="https://github.com/jose-donato/jose-donato.pages.dev"
+    class="link">GitHub</a
+  >. If you like it, please give it a ⭐️!
 </p>
