--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,43 +4,43 @@ import Icon from "../components/Icon.astro";
 import { PROJECTS } from "../utils/constants";
 
 const technologies = Array.from(
-	new Set(PROJECTS.flatMap((project) => project.technologies)),
+  new Set(PROJECTS.flatMap((project) => project.technologies)),
 );
 const url = new URL(Astro.request.url);
 const query = url.searchParams.get("q") || "";
 const results = query
-	? PROJECTS.filter((project) => project.technologies.includes(query))
-	: PROJECTS;
+  ? PROJECTS.filter((project) => project.technologies.includes(query))
+  : PROJECTS;
 
 // Fetch GitHub stars for projects with GitHub URLs
 const projectsWithStars = await Promise.all(
-	results.map(async (project) => {
-		// Check if the URL is a GitHub repository URL
-		if (project.url?.includes("github.com")) {
-			try {
-				// Extract owner and repo from GitHub URL
-				const urlParts = new URL(project.url).pathname
-					.split("/")
-					.filter(Boolean);
-				if (urlParts.length >= 2) {
-					const owner = urlParts[0];
-					const repo = urlParts[1];
+  results.map(async (project) => {
+    // Check if the URL is a GitHub repository URL
+    if (project.url?.includes("github.com")) {
+      try {
+        // Extract owner and repo from GitHub URL
+        const urlParts = new URL(project.url).pathname
+          .split("/")
+          .filter(Boolean);
+        if (urlParts.length >= 2) {
+          const owner = urlParts[0];
+          const repo = urlParts[1];
 
-					// Fetch star count from GitHub API
-					const response = await fetch(
-						`https://api.github.com/repos/${owner}/${repo}`,
-					);
-					if (response.ok) {
-						const data = await response.json();
-						return { ...project, stars: data.stargazers_count };
-					}
-				}
-			} catch (error) {
-				console.error(`Error fetching stars for ${project.title}:`, error);
-			}
-		}
-		return project;
-	}),
+          // Fetch star count from GitHub API
+          const response = await fetch(
+            `https://api.github.com/repos/${owner}/${repo}`,
+          );
+          if (response.ok) {
+            const data = await response.json();
+            return { ...project, stars: data.stargazers_count };
+          }
+        }
+      } catch (error) {
+        console.error(`Error fetching stars for ${project.title}:`, error);
+      }
+    }
+    return project;
+  }),
 );
 ---
 
@@ -50,18 +50,18 @@ const projectsWithStars = await Promise.all(
       <ul class="">
         <form class="space-y-2">
           <div class="flex flex-wrap gap-2">
-          {
-            technologies.map((tech) => (
-              <button
-                type="submit"
-                name="q"
-                value={tech}
-                class={query === tech ? "btn" : "btn-outline"}
-              >
-                {tech}
-              </button>
-            ))
-          }
+            {
+              technologies.map((tech) => (
+                <button
+                  type="submit"
+                  name="q"
+                  value={tech}
+                  class={query === tech ? "btn" : "btn-outline"}
+                >
+                  {tech}
+                </button>
+              ))
+            }
           </div>
           {
             query && (
@@ -77,19 +77,29 @@ const projectsWithStars = await Promise.all(
             projectsWithStars.map((project) => (
               <li class="card flex flex-col gap-2">
                 <h2 class="font-bold">{project.title}</h2>
-                <p class="text-sm">Type: {project.type}</p>
-                <p class="text-sm">
-                  Technologies: {project.technologies.join(", ")}
+                <p class="rounded-full px-1.5 text-xs leading-normal bg-gray-100 dark:bg-gray-800 w-fit">
+                  {project.type}
                 </p>
-                <p class="text-sm">Description: {project.description}</p>
+                <p class="text-sm">
+                  Technologies used: {project.technologies.join(", ")}
+                </p>
+                <p class="text-sm">{project.description}</p>
                 <div class="flex justify-between mt-auto">
                   <div>
-                  {project.stars !== undefined && (
-                    <a href={project.url} target="_blank" rel="noreferrer noopener" class="flex items-center gap-1 text-sm">
-                      <Icon id="material-symbols-light-kid-star-sharp" className="w-4 h-4 text-yellow-400" />
-                      <span>{project.stars}</span>
-                    </a>
-                  )}
+                    {project.stars !== undefined && (
+                      <a
+                        href={project.url}
+                        target="_blank"
+                        rel="noreferrer noopener"
+                        class="flex items-center gap-1 text-sm"
+                      >
+                        <Icon
+                          id="material-symbols-light-kid-star-sharp"
+                          className="w-4 h-4 text-yellow-400"
+                        />
+                        <span>{project.stars}</span>
+                      </a>
+                    )}
                   </div>
                   <a
                     href={project.url}
