--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -126,7 +126,7 @@ body {
   opacity: 0.15;
   background-image: conic-gradient(
     at 92% 8%,
-    rgb(32, 33, 40) 90deg,
+    rgba(32, 33, 40, 0.3) 90deg,
     transparent 0deg,
     transparent 225deg,
     transparent 0deg
@@ -139,7 +139,7 @@ body {
 .dark ._bg-effect {
   background-image: conic-gradient(
     at 92% 8%,
-    rgb(255, 255, 255) 90deg,
+    rgba(255, 255, 255, 0.3) 90deg,
     /* Lighter color for contrast */ transparent 0deg,
     transparent 225deg,
     transparent 0deg
