--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,17 +10,22 @@ import { Image } from "astro:assets";
     <h1 class="text-xl tracking-wide">
       Hello! My name is
       {" "}
-      <span class="font-bold">José Donato</span>{" "}<span class="wave">👋</span>
+      <span class="font-bold">José Donato</span>{" "}<span class="wave">👋</span
+      >
     </h1>
-    <div class="flex flex-col gap-1 text-sm text-zinc-500 dark:text-zinc-300 mt-4">
+    <div
+      class="flex flex-col gap-1 text-sm text-zinc-500 dark:text-zinc-300 mt-4"
+    >
       <p>
-        I'm a Fullstack Engineer from Portugal, specializing in building tools for quants and traders. Currently leading web development at OpenBB, I've architected and built OpenBB Workspace from the ground up over the past 4 years.
-        My passion lies at the intersection of <span class="underline-animation">trading</span> and <span class="underline-animation">web technology</span>.
-    </p>
-    <p>
-      Want to have a quick chat? You can DM me on Twitter, LinkedIn, or email me.
+        I'm a Fullstack Engineer from Portugal, specializing in building tools
+        for quants and traders. Currently leading web development at OpenBB,
+        I've architected and built OpenBB Workspace from the ground up over the
+        past 4 years. My passion lies at the intersection of <span
+          class="underline-animation">trading</span
+        > and <span class="underline-animation">web technology</span>.
       </p>
-      </div>
+      <p>Want to have a quick chat? You can DM me on Twitter or LinkedIn.</p>
+    </div>
     <div class="flex gap-3 mt-4 items-end">
       {
         SOCIALS.map((social) => (
@@ -50,7 +55,6 @@ import { Image } from "astro:assets";
 <div class="h-[1px] w-full bg-zinc-600/30 dark:bg-zinc-300/50 my-4"></div>
 <Floater />
 
-
 <style>
   .underline-animation {
     position: relative;
@@ -58,17 +62,18 @@ import { Image } from "astro:assets";
   }
 
   .underline-animation::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 2px;
-    background-image: linear-gradient(transparent, transparent), 
-                     linear-gradient(#155dfc, #155dfc);
+    background-image: linear-gradient(transparent, transparent),
+      linear-gradient(#155dfc, #155dfc);
     background-size: 100% 2px;
     background-position: 0 100%;
     background-repeat: no-repeat;
     rotate: -2deg;
   }
-</style> 
+</style>
+
